--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,5 +1,5 @@
 # Use Python base image
-FROM python:3.12-slim
+FROM python:3.10
 
 # Set work directory
 WORKDIR /app
@@ -19,4 +19,4 @@ COPY . /app/
 EXPOSE 8000
 
 # Start server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", "-p"]
