--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -1,22 +1,15 @@
-# Use Python base image
-FROM python:3.10
-
-# Set work directory
+# Stage 1: Build
+FROM python:3.10-slim as builder
 WORKDIR /app
+COPY requirements.txt .
+RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev \
+    && pip install --no-cache-dir -r requirements.txt \
+    && rm -rf /var/lib/apt/lists/*
 
-# Prevent Python from writing pyc files
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Install dependencies
-COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy project files
-COPY . /app/
-
-# Expose port 8000
+# Stage 2: Final minimal image
+FROM python:3.10-slim
+WORKDIR /app
+COPY --from=builder /usr/local/lib/python3.10 /usr/local/lib/python3.10
+COPY . .
 EXPOSE 8000
-
-# Start server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000", "-p"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
