--- a/messaging_app/.github/workflows/ci.yml
+++ b/messaging_app/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Django Tests
+name: CI - Django Tests & Code Quality
 
 on:
   push:
@@ -44,7 +44,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-django pytest-cov
+          pip install pytest pytest-django pytest-cov flake8
 
       - name: Wait for MySQL
         run: |
@@ -58,6 +58,17 @@ jobs:
         run: |
           python manage.py migrate --noinput
 
-      - name: Run tests
+      - name: Lint with flake8
         run: |
-          pytest --ds=messaging_app.settings --disable-warnings -q --cov
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --max-complexity=10 --max-line-length=88 --statistics
+
+      - name: Run tests with coverage
+        run: |
+          pytest --ds=messaging_app.settings --disable-warnings --cov=. --cov-report=xml --cov-report=html
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: htmlcov/
